--- a/menang.html
+++ b/menang.html
@@ -15,8 +15,8 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background: url('images/menang.jpg') no-repeat center center; /* Ganti dengan gambar background yang sesuai */
-            background-size: cover;
+            background: url('images/menang.jpg') no-repeat center; /* Ganti dengan gambar background yang sesuai */
+            /*background-size: cover;*/
             overflow: hidden;
         }
         h1 {
