--- a/menang.html
+++ b/menang.html
@@ -15,7 +15,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background: url('images/menang.jpg') no-repeat center; /* Ganti dengan gambar background yang sesuai */
+            background: url('images/menang.jpg') no-repeat bottom; /* Ganti dengan gambar background yang sesuai */
             /*background-size: cover;*/
             overflow: hidden;
         }
